src/assets/main.css
* {
  margin: 0;
}

.arrow-color { color: #3B89DF; }

.sidebar-secondary-color { background-color: #DDEEF8; }

.app-background-color, .user-tab:hover { background-color: #E1E1E1; }

.blue-button { 
  border: none;
  padding: 10px 0px;
  border-radius: 5px;
  background-color: #1A7AFF; 
  color: white;
}

.blue-button:hover {
  opacity: 0.75;
}

@media screen and (max-width: 800px) {
  #app-container {
    flex-direction: column;
  }

  .user-card {
    border-radius: 0px;
    width: 100%;
  }

  #app-sidebar {
    order: 3;
    width: 100%;
  }

  #hide-reveal-sidebar {
    display: none;
    order: 2;
  }

  #hide-reveal-button {
    width: 100%;
  }

  .app-main-hidable {
    display: none;
  }
}

